<resources>
    <string name="app_name">WowGuau</string>
    <string name="user">Usuario</string>
    <string name="password">Passw</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registro">Registro</string>
    <string name="registro_inicio"><u>Registrarse</u></string>
    <string name="nombre_apellido">  Nombres y apellidos</string>
    <string name="email">  Email</string>
    <string name="contrasena">  Contraseña</string>
    <string name="conf_contrasena">  Confirmar contraseña</string>
    <string name="movil">  Móvil</string>
    <string name="direccion">  Dirección</string>
    <string name="piso_oficina_apto">  Piso/Oficina/Apto</string>
    <string name="term_y_cond_title">Términos y Condiciones</string>
    <string name="term_y_cond">Al continuar, también aceptas los términos del servicio y la política de privacidad de WowGuau.</string>
    <string name="con_term_y_cond"><u>Conocer Términos y Condiciones</u></string>
    <string name="owner_profile">Perfil dueño</string>
    <string name="ecommerce">Ecommerce</string>
    <string name="home">Home</string>
    <string name="certificado_paseador">Agregar certificado de Paseador</string>
    <string name="mens_subir_archivo">Por favor suba el archivo del certificado</string>
    <string name="subir_archivo">Subir Archivo</string>
    <string name="calendario_del_mes">Calendario del mes</string>

    <string name="title_activity_home__paseador">Home_Paseador</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Android Studio</string>

    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>

    <string name="identification">Identificación</string>
    <string name="age">Edad</string>
    <string name="address">Dirección</string>
    <string name="phone">Celular</string>
    <string name="next">Continuar</string>
    <string name="pet_register">Agregar Mascota</string>
    <string name="name">Nombre</string>
    <string name="race">Raza</string>
    <string name="food">Comida Preferida</string>
    <string name="restrictions">Restricciones</string>
    <string name="macho">Macho</string>
    <string name="hembra">Hembra</string>
    <string name="ajustes">Ajustes</string>
    <string name="owner_register">Registro Dueño</string>
    <string name="home_dueno">Home Dueño</string>

    <string name="menulogout"> Cerrar Sesión</string>
    <string name="menuConfiguracion">Configuraciónn</string>

    <string name="register">Registro</string>

    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_home_paseador">HomePaseador</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="razas_spinner">
        <item>Afgano</item>
        <item>Barzoi</item>
        <item>Boxer</item>
        <item>Caniche</item>
        <item>Chihuahua</item>
        <item>Criollo</item>
        <item>Dalmata</item>
        <item>Dogo Aleman</item>
        <item>Gran Danes</item>
        <item>Husky Siberiano</item>
    </string-array>
    <string-array name="tamano_spinner">
        <item>Pequeño</item>
        <item>Mediano</item>
        <item>Grande</item>

    </string-array>
    <string-array name="vacunas_spinner">
        <item>Moquillo</item>
        <item>Parvovirosis</item>
        <item>Rabia</item>
        <item>Triple</item>
        <item>Leptospira</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="perros_spinner">
        <item>Amaru</item>
        <item>Wanda</item>
        <item>London</item>
        <item>Ariana</item>
        <item>Pandora</item>
    </string-array>

</resources>
