<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OwnerRegister">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ownerPhoto"
                android:layout_width="165dp"
                android:layout_height="156dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="50dp"
                app:srcCompat="@drawable/owner_icon" />

            <EditText
                android:id="@+id/identificationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/identification"
                android:layout_marginTop="25dp"
                android:inputType="number" />

            <EditText
                android:id="@+id/ageText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:layout_marginTop="25dp"
                android:inputType="number"/>

            <EditText
                android:id="@+id/addressText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/address" />

            <EditText
                android:id="@+id/phoneText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phone"
                android:layout_marginTop="25dp"
                android:inputType="number" />

            <Button
                android:id="@+id/btnnextOwner"
                android:layout_width="122dp"
                android:layout_height="52dp"
                android:text="@string/next"
                android:textColor="@color/blanco"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@color/colorVerdeFondoPantallas"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>